<resources>
    <string name="app_name">Imgur</string>

    <string name="hello_world">Hello world!</string>
    <string name="comments">COMMENTS</string>
    <string name="action_settings">Settings</string>
    <string name="lipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In posuere imperdiet purus, semper tincidunt dui scelerisque eu. Sed pretium libero et nisl laoreet posuere. Cras vel lobortis arcu, ac rutrum ex. Nunc vel pulvinar magna. Donec at magna interdum, aliquet magna scelerisque, semper lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vel tristique massa, iaculis vehicula nunc. Ut non lectus scelerisque, pellentesque felis vitae, molestie libero. Proin elit turpis, ullamcorper at porta nec, pretium id risus. Suspendisse nibh ipsum, pharetra sed venenatis a, tincidunt id arcu. Curabitur non est risus. Sed pellentesque diam eget suscipit fringilla. Vestibulum facilisis nec dui in luctus. Phasellus sagittis, enim dapibus congue hendrerit, ipsum sapien commodo sapien, auctor blandit magna dolor vitae eros.  In sed elit quis ipsum malesuada porttitor. Praesent aliquam ex et condimentum iaculis. Nullam ante risus, laoreet in ultricies ut, scelerisque ut turpis. Praesent et lobortis ipsum. Curabitur vestibulum fermentum diam id viverra. Donec nisi ipsum, sodales ut interdum eget, vestibulum vitae orci. Ut tempor tortor quis placerat euismod. Cras dapibus lorem at efficitur scelerisque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum eu efficitur lectus. Suspendisse eget pharetra nisi. Etiam auctor sem non orci pretium dictum.  Proin molestie ex diam, vitae pharetra ligula dictum sit amet. Vivamus tempus iaculis scelerisque. Phasellus malesuada tortor arcu, non suscipit elit imperdiet auctor. Nulla pellentesque, purus sed cursus viverra, urna ipsum tincidunt enim, sollicitudin pharetra massa orci quis tortor. Donec eu consectetur mi, id laoreet sapien. Praesent a est tortor. Phasellus enim tortor, placerat quis libero et, pellentesque hendrerit erat. Nulla tellus felis, bibendum et orci id, interdum venenatis leo. Morbi viverra dapibus urna, vel egestas diam ultrices ac. Proin bibendum turpis ligula, tempus gravida libero malesuada eu. Ut pretium sapien at volutpat maximus. Nullam tempor consectetur dolor, eu congue lacus efficitur ut. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  Maecenas pretium lectus sed sollicitudin bibendum. Vivamus in turpis convallis, laoreet dolor in, lacinia nunc. Proin orci nulla, mattis sit amet erat eu, volutpat elementum ante. Etiam ac leo in ante tristique vulputate eget dictum elit. Sed nulla ante, aliquet a sem cursus, tincidunt eleifend felis. Nulla placerat ante eget ornare ornare. In malesuada, ipsum quis elementum sodales, ligula felis egestas orci, eu rutrum nibh nisi vitae libero. Fusce sed laoreet purus, sed consectetur ex. Donec id ex quis nisi dapibus vestibulum nec a orci. Aliquam enim neque, congue in ipsum nec, ultrices ullamcorper lorem. Pellentesque vel risus eu purus vehicula pulvinar. Vivamus lobortis, nulla sit amet laoreet porta, velit nulla blandit diam, ac iaculis ante lacus in elit.  Integer ut semper tortor, non accumsan sem. Cras sapien mauris, blandit ac ante ac, viverra feugiat sem. Cras nec dui vestibulum, iaculis mi a, suscipit quam. Nullam condimentum sed justo vitae cursus. Fusce nibh ipsum, vulputate pulvinar leo eget, vehicula blandit tortor. Nullam vulputate, eros sit amet rhoncus lacinia, erat orci venenatis quam, sit amet semper nunc eros vel eros. Sed tellus augue, fermentum ut dui sed, eleifend egestas libero. Ut vulputate lobortis mi. Mauris at enim aliquam, tempus nisi vitae, malesuada neque. Ut rhoncus interdum suscipit. Nam tincidunt dolor nec porta tristique. Donec luctus porttitor lacinia. Pellentesque sit amet ex a diam pretium viverra. Suspendisse potenti. Vivamus scelerisque porta nisl sit amet bibendum.  Phasellus diam lorem, rutrum id eros tristique, faucibus mattis nulla. Duis porta velit mi, sit amet aliquam justo eleifend sit amet. Sed elementum diam ac felis elementum, nec elementum mauris lobortis. Cras euismod ultrices vehicula. Nunc non pretium odio, at ultricies odio. Ut consequat, metus vel consectetur commodo, ligula ex eleifend lacus, vel consectetur dolor ex et nisi. Praesent in tortor ultricies eros tincidunt fringilla sodales eget velit. Mauris sollicitudin hendrerit turpis, vitae rutrum velit varius et.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery_pager">GalleryPagerActivity</string>
    <string name="lipsum_title">The Yosemite valley in the morning sun</string>
    <string name="lipsum_username">kubasp</string>
    <string name="lipsum_upvotes">1.6k</string>
    <string name="lipsum_since_posted">6h</string>
    <string name="lipsum_comment">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="lipsum_replies">2 replies</string>
    <string name="lipsum_comment2">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</string>
</resources>
