<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/image"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/lipsum_title"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/lipsum_username"
                    android:textColor="@color/textColorAccent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/lipsum_upvotes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lipsum_since_posted"
                    android:textColor="@color/textColorSecondary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/window_background_dark2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:text="@string/comments"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorPrimary"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lipsum_comment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:id="@+id/comment_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/comment"
                    android:layout_marginRight="8dp"
                    android:text="@string/lipsum_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorAccent"/>

                <TextView
                    android:id="@+id/comment_upvotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_poster"
                    android:text="@string/lipsum_upvotes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_since_posted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_upvotes"
                    android:text="@string/lipsum_since_posted"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_replies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/comment"
                    android:text="@string/lipsum_replies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/comment2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lipsum_comment2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:id="@+id/comment_poster2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/comment2"
                    android:layout_marginRight="8dp"
                    android:text="@string/lipsum_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorAccent"/>

                <TextView
                    android:id="@+id/comment_upvotes2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment2"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_poster2"
                    android:text="@string/lipsum_upvotes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_since_posted2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment2"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_upvotes2"
                    android:text="@string/lipsum_since_posted"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_replies2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/comment2"
                    android:text="@string/lipsum_replies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/comment3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lipsum_comment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:id="@+id/comment_poster3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/comment3"
                    android:layout_marginRight="8dp"
                    android:text="@string/lipsum_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorAccent"/>

                <TextView
                    android:id="@+id/comment_upvotes3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment3"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_poster3"
                    android:text="@string/lipsum_upvotes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_since_posted3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment3"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_upvotes3"
                    android:text="@string/lipsum_since_posted"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_replies3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/comment3"
                    android:text="@string/lipsum_replies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/comment4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lipsum_comment2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:id="@+id/comment_poster4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/comment4"
                    android:layout_marginRight="8dp"
                    android:text="@string/lipsum_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorAccent"/>

                <TextView
                    android:id="@+id/comment_upvotes4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment4"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_poster4"
                    android:text="@string/lipsum_upvotes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_since_posted4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment4"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/comment_upvotes4"
                    android:text="@string/lipsum_since_posted"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

                <TextView
                    android:id="@+id/comment_replies4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/comment4"
                    android:text="@string/lipsum_replies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/textColorSecondary"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>